[package]
name = "issue_watcher_bot"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# Profiles
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
codegen-units = 8
incremental = true

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[dependencies]
assign = "1.1.0"
rand = "0.8.0"
reqwest = { version = "0.10.10", features = ["json"] }
http = "0.2.2"
directories = "3.0.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
tokio = { version = "0.2.24", features = ["full"] }
ruma = { git = "https://github.com/ruma/ruma", rev = "19ae6ff", features = ["client-api", "unstable-pre-spec"] }
ruma-client = { git = "https://github.com/ruma/ruma", rev = "19ae6ff" }
