[package]
name = "issue_watcher_bot"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# Profiles
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
codegen-units = 8
incremental = true

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[dependencies]
assign = "1.1.1"
rand = "0.8.3"
reqwest = { version = "0.11.0", features = ["json"] }
http = "0.2.3"
directories = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.15"
tokio = { version = "1.8.4", features = ["full"] }
tokio-stream = "0.1.2"
ruma = { git = "https://github.com/ruma/ruma", rev = "b087cf7", features = ["client-api", "unstable-pre-spec"] }
ruma-client = { git = "https://github.com/ruma/ruma", rev = "b087cf7" }
